test/compile-fail/resolution/redefinition-struct-fn-mod/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:2:3
  |
1 | struct b {}
  |        - previous definition of the type `b` here
2 | fn b() {}
  |    ^ `b` redefined here
